tests/compile_fail/missing_args_2.rs
use cmpchain::chain;
fn main() { chain!(1 < ); }